crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-array-spread-pushed-arguments.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-array-spread-pushed-arguments.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(2);
	let args;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		args = [];
		args.push(0);
		args.push(1);
		$[0] = args;
	} else {
		args = $[0];
	}
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = new Date(...new Array(...args));
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
