crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-array-unshift-two.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-array-unshift-two.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(4);
	const { timestamp } = t0;
	let args;
	if ($[0] !== timestamp) {
		args = [];
		args.unshift(0, timestamp);
		$[0] = timestamp;
		$[1] = args;
	} else {
		args = $[1];
	}
	let t1;
	if ($[2] !== args) {
		t1 = new Date(...new Array(...args));
		$[2] = args;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
